@@ -1,10 +1,11 @@
 package org.opentripplanner.graph_builder.module.osm;
 
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.geom.GeometryFactory;
 import org.locationtech.jts.geom.LineString;
-import org.locationtech.jts.geom.LinearRing;
 import org.locationtech.jts.geom.MultiLineString;
 import org.locationtech.jts.geom.MultiPolygon;
 import org.locationtech.jts.geom.Point;
@@ -13,11 +14,12 @@ import org.opentripplanner.common.geometry.GeometryUtils;
 import org.opentripplanner.common.geometry.SphericalDistanceLibrary;
 import org.opentripplanner.common.model.P2;
 import org.opentripplanner.graph_builder.DataImportIssueStore;
-import org.opentripplanner.graph_builder.issues.AreaNotEpsilonValid;
 import org.opentripplanner.graph_builder.issues.AreaTooComplicated;
 import org.opentripplanner.graph_builder.module.osm.OpenStreetMapModule.Handler;
 import org.opentripplanner.graph_builder.services.StreetEdgeFactory;
 import org.opentripplanner.openstreetmap.model.OSMNode;
+import org.opentripplanner.openstreetmap.model.OSMRelation;
+import org.opentripplanner.openstreetmap.model.OSMRelationMember;
 import org.opentripplanner.openstreetmap.model.OSMWithTags;
 import org.opentripplanner.routing.algorithm.astar.AStar;
 import org.opentripplanner.routing.algorithm.astar.strategies.SkipEdgeStrategy;
@@ -37,11 +39,8 @@ import org.opentripplanner.routing.spt.DominanceFunction;
 import org.opentripplanner.routing.spt.GraphPath;
 import org.opentripplanner.routing.spt.ShortestPathTree;
 import org.opentripplanner.routing.vertextype.IntersectionVertex;
+import org.opentripplanner.routing.vertextype.OsmVertex;
 import org.opentripplanner.util.I18NString;
-import org.opentripplanner.visibility.Environment;
-import org.opentripplanner.visibility.VLPoint;
-import org.opentripplanner.visibility.VLPolygon;
-import org.opentripplanner.visibility.VisibilityPolygon;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -80,8 +79,6 @@ public class WalkableAreaBuilder {
 
     private final int maxAreaNodes;
 
-    public static final double VISIBILITY_EPSILON = 0.000000001;
-
     private Graph graph;
 
     private OSMDatabase osmdb;
@@ -95,9 +92,13 @@ public class WalkableAreaBuilder {
 
     private HashMap<Coordinate, IntersectionVertex> areaBoundaryVertexForCoordinate = new HashMap<Coordinate, IntersectionVertex>();
 
+    private boolean platformEntriesLinking;
+
+    private List<OsmVertex> platformLinkingEndpoints;
+
     public WalkableAreaBuilder(Graph graph, OSMDatabase osmdb, WayPropertySet wayPropertySet,
             StreetEdgeFactory edgeFactory, Handler handler, DataImportIssueStore issueStore,
-            int maxAreaNodes
+            int maxAreaNodes, boolean platformEntriesLinking
     ) {
         this.graph = graph;
         this.osmdb = osmdb;
@@ -106,6 +107,14 @@ public class WalkableAreaBuilder {
         this.handler = handler;
         this.issueStore = issueStore;
         this.maxAreaNodes = maxAreaNodes;
+        this.platformEntriesLinking = platformEntriesLinking;
+        this.platformLinkingEndpoints = platformEntriesLinking
+            ? graph.getVertices().stream().
+                filter(OsmVertex.class::isInstance).
+                map(OsmVertex.class::cast).
+                filter(this::isPlatformLinkingEndpoint).
+                collect(Collectors.toList())
+            : List.of();
     }
 
     /**
@@ -118,8 +127,7 @@ public class WalkableAreaBuilder {
         // create polygon and accumulate nodes for area
         for (Ring ring : group.outermostRings) {
 
-            AreaEdgeList edgeList = new AreaEdgeList();
-            edgeList.setOriginalEdges(ring.toJtsPolygon());
+            AreaEdgeList edgeList = new AreaEdgeList(ring.jtsPolygon);
             // the points corresponding to concave or hole vertices
             // or those linked to ways
             HashSet<P2<OSMNode>> alreadyAddedEdges = new HashSet<P2<OSMNode>>();
@@ -128,20 +136,19 @@ public class WalkableAreaBuilder {
             // and to avoid the numerical problems that they tend to cause
             for (Area area : group.areas) {
 
-                if (!ring.toJtsPolygon().contains(area.toJTSMultiPolygon())) {
+                if (!ring.jtsPolygon.contains(area.jtsMultiPolygon)) {
                     continue;
                 }
 
                 for (Ring outerRing : area.outermostRings) {
                     for (int i = 0; i < outerRing.nodes.size(); ++i) {
-                        createEdgesForRingSegment(edges, edgeList, area, outerRing, i,
-                            alreadyAddedEdges);
+                        edges.addAll(createEdgesForRingSegment(edgeList, area, outerRing, i, alreadyAddedEdges));
                     }
                     //TODO: is this actually needed?
-                    for (Ring innerRing : outerRing.holes) {
+                    for (Ring innerRing : outerRing.getHoles()) {
                         for (int j = 0; j < innerRing.nodes.size(); ++j) {
-                            createEdgesForRingSegment(edges, edgeList, area, innerRing, j,
-                                alreadyAddedEdges);
+                            edges.addAll(createEdgesForRingSegment(edgeList, area, innerRing, j,
+                                alreadyAddedEdges));
                         }
                     }
                 }
@@ -149,36 +156,51 @@ public class WalkableAreaBuilder {
         }
     }
 
-    public void buildWithVisibility(AreaGroup group, boolean platformEntriesLinking) {
+    public void buildWithVisibility(AreaGroup group) {
+        // These sets contain the nodes/vertices which can be used to traverse from the rest of the
+        // street network onto the walkable area
         Set<OSMNode> startingNodes = new HashSet<OSMNode>();
         Set<Vertex> startingVertices = new HashSet<Vertex>();
+
+        // List of edges belonging to the walkable area
         Set<Edge> edges = new HashSet<Edge>();
+
+        // Edges which are part of the rings. We want to keep there for linking even tough they
+        // might not be part of the visibility edges.
+        Set<Edge> ringEdges = new HashSet<>();
+
+        // OSM ways that this area group consists of
+        Set<Long> osmWayIds = group.areas.stream()
+                .map(area -> area.parent)
+                .flatMap(osmWithTags -> osmWithTags instanceof OSMRelation
+                        ? ((OSMRelation) osmWithTags).getMembers().stream().map(OSMRelationMember::getRef)
+                        : Stream.of(osmWithTags.getId())
+                )
+                .collect(Collectors.toSet());
+
 
         // create polygon and accumulate nodes for area
         for (Ring ring : group.outermostRings) {
+            Polygon polygon = ring.jtsPolygon;
+            AreaEdgeList edgeList = new AreaEdgeList(polygon);
 
-            AreaEdgeList edgeList = new AreaEdgeList();
             // the points corresponding to concave or hole vertices
             // or those linked to ways
-            ArrayList<VLPoint> visibilityPoints = new ArrayList<VLPoint>();
-            ArrayList<OSMNode> visibilityNodes = new ArrayList<OSMNode>();
+            HashSet<OSMNode> visibilityNodes = new HashSet<OSMNode>();
             HashSet<P2<OSMNode>> alreadyAddedEdges = new HashSet<P2<OSMNode>>();
+            HashSet<OsmVertex> platformLinkingVertices = new HashSet<>();
             // we need to accumulate visibility points from all contained areas
             // inside this ring, but only for shared nodes; we don't care about
             // convexity, which we'll handle for the grouped area only.
 
+            GeometryFactory geometryFactory = GeometryUtils.getGeometryFactory();
+
+            OSMWithTags areaEntity = group.getSomeOSMObject();
+
             // we also want to fill in the edges of this area anyway, because we can,
             // and to avoid the numerical problems that they tend to cause
             for (Area area : group.areas) {
-
-                // public transform platforms will be handled separately if platformEntriesLinking
-                // parameter is true
-                if(platformEntriesLinking
-                        && "platform".equals(area.parent.getTag("public_transport"))) {
-                    continue;
-                }
-
-                if (!ring.toJtsPolygon().contains(area.toJTSMultiPolygon())) {
+                if (!polygon.contains(area.jtsMultiPolygon)) {
                     continue;
                 }
 
@@ -186,82 +208,76 @@ public class WalkableAreaBuilder {
                 Collection<OSMNode> nodes = osmdb.getStopsInArea(area.parent);
                 if (nodes != null) {
                     for (OSMNode node : nodes) {
-                        addtoVisibilityAndStartSets(startingNodes, visibilityPoints,
-                                visibilityNodes, node);
+                        platformLinkingVertices.add(handler.getVertexForOsmNode(node, areaEntity));
+                        visibilityNodes.add(node);
+                        startingNodes.add(node);
                     }
                 }
 
                 for (Ring outerRing : area.outermostRings) {
+                    // Add unconnected entries to area if platformEntriesLinking parameter is true
+                    if (platformEntriesLinking
+                            && "platform".equals(area.parent.getTag("public_transport"))) {
+                        List<OsmVertex> endpointsWithin = platformLinkingEndpoints.stream()
+                            .filter(t -> outerRing.jtsPolygon
+                                    .contains(geometryFactory.createPoint(t.getCoordinate())))
+                            .collect(Collectors.toList());
+                        platformLinkingVertices.addAll(endpointsWithin);
+                        for (OsmVertex v : endpointsWithin) {
+                            OSMNode node = osmdb.getNode(v.nodeId);
+                            visibilityNodes.add(node);
+                            startingNodes.add(node);
+                        }
+                    }
+
                     for (int i = 0; i < outerRing.nodes.size(); ++i) {
                         OSMNode node = outerRing.nodes.get(i);
-                        createEdgesForRingSegment(edges, edgeList, area, outerRing, i,
-                                alreadyAddedEdges);
-                        addtoVisibilityAndStartSets(startingNodes, visibilityPoints,
-                                visibilityNodes, node);
+                        Set<AreaEdge> newEdges = createEdgesForRingSegment(
+                            edgeList,
+                            area,
+                            outerRing,
+                            i,
+                            alreadyAddedEdges
+                        );
+                        edges.addAll(newEdges);
+                        ringEdges.addAll(newEdges);
+                        // TODO: this is really needed only for convex nodes, could be a perf optimization
+                        visibilityNodes.add(node);
+                        if (isStartingNode(node, osmWayIds)) {
+                            startingNodes.add(node);
+                        }
                     }
-                    for (Ring innerRing : outerRing.holes) {
+                    for (Ring innerRing : outerRing.getHoles()) {
                         for (int j = 0; j < innerRing.nodes.size(); ++j) {
                             OSMNode node = innerRing.nodes.get(j);
-                            createEdgesForRingSegment(edges, edgeList, area, innerRing, j,
-                                    alreadyAddedEdges);
-                            addtoVisibilityAndStartSets(startingNodes, visibilityPoints,
-                                    visibilityNodes, node);
+                            edges.addAll(createEdgesForRingSegment(edgeList, area, innerRing, j,
+                                    alreadyAddedEdges));
+                            // TODO: this is really needed only for convex nodes, could be a perf optimization
+                            visibilityNodes.add(node);
+                            if (isStartingNode(node, osmWayIds)) {
+                                startingNodes.add(node);
+
+                            }
                         }
                     }
                 }
             }
-            List<OSMNode> nodes = new ArrayList<OSMNode>();
-            List<VLPoint> vertices = new ArrayList<VLPoint>();
-            accumulateRingNodes(ring, nodes, vertices);
-            VLPolygon polygon = makeStandardizedVLPolygon(vertices, nodes, false);
-            accumulateVisibilityPoints(ring.nodes, polygon, visibilityPoints, visibilityNodes,
-                    false);
 
-            ArrayList<VLPolygon> polygons = new ArrayList<VLPolygon>();
-            polygons.add(polygon);
-            // holes
-            for (Ring innerRing : ring.holes) {
-                ArrayList<OSMNode> holeNodes = new ArrayList<OSMNode>();
-                vertices = new ArrayList<VLPoint>();
-                accumulateRingNodes(innerRing, holeNodes, vertices);
-                VLPolygon hole = makeStandardizedVLPolygon(vertices, holeNodes, true);
-                accumulateVisibilityPoints(innerRing.nodes, hole, visibilityPoints,
-                        visibilityNodes, true);
-                nodes.addAll(holeNodes);
-                polygons.add(hole);
-            }
-
-            Environment areaEnv = new Environment(polygons);
             // FIXME: temporary hard limit on size of
             // areas to prevent way explosion
-            if (visibilityPoints.size() > maxAreaNodes) {
+            if (polygon.getNumPoints() > maxAreaNodes) {
                 issueStore.add(
                         new AreaTooComplicated(
-                                group.getSomeOSMObject().getId(), visibilityPoints.size(),
+                                group.getSomeOSMObject().getId(), visibilityNodes.size(),
                                 maxAreaNodes
                         ));
                 continue;
             }
 
-            if (!areaEnv.is_valid(VISIBILITY_EPSILON)) {
-                // these errors seem not to harm area visibility processing
-                // so just log an error (most likely OSM mapping error)
-                issueStore.add(new AreaNotEpsilonValid(group.getSomeOSMObject().getId()));
-            }
-
-            edgeList.setOriginalEdges(ring.toJtsPolygon());
-
             createNamedAreas(edgeList, ring, group.areas);
 
-            OSMWithTags areaEntity = group.getSomeOSMObject();
-
-            for (int i = 0; i < visibilityNodes.size(); ++i) {
-                OSMNode nodeI = visibilityNodes.get(i);
-                VisibilityPolygon visibilityPolygon = new VisibilityPolygon(
-                        visibilityPoints.get(i), areaEnv, VISIBILITY_EPSILON);
-                Polygon poly = toJTSPolygon(visibilityPolygon);
-                for (int j = 0; j < visibilityNodes.size(); ++j) {
-                    OSMNode nodeJ = visibilityNodes.get(j);
+            for (OSMNode nodeI : visibilityNodes) {
+                for (OSMNode nodeJ : visibilityNodes) {
                     P2<OSMNode> nodePair = new P2<OSMNode>(nodeI, nodeJ);
                     if (alreadyAddedEdges.contains(nodePair))
                         continue;
@@ -271,25 +287,42 @@ public class WalkableAreaBuilder {
                     IntersectionVertex endEndpoint = handler.getVertexForOsmNode(nodeJ,
                             areaEntity);
 
-                    Coordinate[] coordinates = new Coordinate[] { startEndpoint.getCoordinate(),
-                            endEndpoint.getCoordinate() };
-                    GeometryFactory geometryFactory = GeometryUtils.getGeometryFactory();
+                    Coordinate[] coordinates = new Coordinate[]{
+                            startEndpoint.getCoordinate(),
+                            endEndpoint.getCoordinate()
+                    };
                     LineString line = geometryFactory.createLineString(coordinates);
-                    if (poly != null && poly.contains(line)) {
-
-                        createSegments(nodeI, nodeJ, startEndpoint, endEndpoint, group.areas,
-                                edgeList, edges);
+                    if (polygon.contains(line)) {
+                        Set<AreaEdge> segments = createSegments(
+                            startEndpoint,
+                            endEndpoint,
+                            group.areas,
+                            edgeList
+                        );
+                        edges.addAll(segments);
                         if (startingNodes.contains(nodeI)) {
                             startingVertices.add(startEndpoint);
+                            for (AreaEdge segment: segments) {
+                                segment.getArea().visibilityVertices.add(startEndpoint);
+                            }
+                            if (platformLinkingVertices.contains(startEndpoint)) {
+                                ringEdges.addAll(segments);
+                            }
                         }
                         if (startingNodes.contains(nodeJ)) {
                             startingVertices.add(endEndpoint);
+                            for (AreaEdge segment: segments) {
+                                segment.getArea().visibilityVertices.add(endEndpoint);
+                            }
+                            if (platformLinkingVertices.contains(endEndpoint)) {
+                                ringEdges.addAll(segments);
+                            }
                         }
                     }
                 }
             }
         }
-        pruneAreaEdges(startingVertices, edges);
+        pruneAreaEdges(startingVertices, edges, ringEdges);
     }
 
     class ListedEdgesOnly implements SkipEdgeStrategy {
@@ -319,7 +352,7 @@ public class WalkableAreaBuilder {
      * @param startingVertices
      * @param edges
      */
-    private void pruneAreaEdges(Collection<Vertex> startingVertices, Set<Edge> edges) {
+    private void pruneAreaEdges(Collection<Vertex> startingVertices, Set<Edge> edges, Set<Edge> edgesToKeep) {
         if (edges.size() == 0)
             return;
         TraverseMode mode;
@@ -345,70 +378,43 @@ public class WalkableAreaBuilder {
             for (Vertex endVertex : startingVertices) {
                 GraphPath path = spt.getPath(endVertex, false);
                 if (path != null) {
-                    for (Edge edge : path.edges) {
-                        usedEdges.add(edge);
-                    }
+                    usedEdges.addAll(path.edges);
                 }
             }
         }
         for (Edge edge : edges) {
-            if (!usedEdges.contains(edge)) {
+            if (!usedEdges.contains(edge) && !edgesToKeep.contains(edge)) {
                 graph.removeEdge(edge);
             }
         }
     }
 
-    private void addtoVisibilityAndStartSets(Set<OSMNode> startingNodes,
-            ArrayList<VLPoint> visibilityPoints, ArrayList<OSMNode> visibilityNodes, OSMNode node) {
-        if (osmdb.isNodeBelongsToWay(node.getId())
-                || osmdb.isNodeSharedByMultipleAreas(node.getId()) || node.isStop()) {
-            startingNodes.add(node);
-            VLPoint point = new VLPoint(node.lon, node.lat);
-            if (!visibilityPoints.contains(point)) {
-                visibilityPoints.add(point);
-                visibilityNodes.add(node);
-            }
-        }
+    private boolean isStartingNode(OSMNode node, Set<Long> osmWayIds) {
+        return osmdb.isNodeBelongsToWay(node.getId())
+            // Do not add if part of same areaGroup
+            || !osmdb.getAreasForNode(node.getId()).stream()
+                .allMatch(osmWay -> osmWayIds.contains(osmWay.getId()))
+            || node.isStop();
     }
 
-    private Polygon toJTSPolygon(VLPolygon visibilityPolygon) {
-        if (visibilityPolygon.vertices.isEmpty()) {
-            return null;
-        }
-        // incomprehensibly, visilibity's routines for figuring out point-polygon containment are
-        // too broken
-        // to use here, so we have to fall back to JTS.
-        Coordinate[] coordinates = new Coordinate[visibilityPolygon.n() + 1];
-
-        for (int p = 0; p < coordinates.length; ++p) {
-            VLPoint vlPoint = visibilityPolygon.get(p);
-            coordinates[p] = new Coordinate(vlPoint.x, vlPoint.y);
-        }
-        LinearRing shell = GeometryUtils.getGeometryFactory().createLinearRing(coordinates);
-        Polygon poly = GeometryUtils.getGeometryFactory().createPolygon(shell, new LinearRing[0]);
-        return poly;
-    }
-
-    private void createEdgesForRingSegment(Set<Edge> edges, AreaEdgeList edgeList, Area area,
+    private Set<AreaEdge> createEdgesForRingSegment(AreaEdgeList edgeList, Area area,
             Ring ring, int i, HashSet<P2<OSMNode>> alreadyAddedEdges) {
         OSMNode node = ring.nodes.get(i);
         OSMNode nextNode = ring.nodes.get((i + 1) % ring.nodes.size());
         P2<OSMNode> nodePair = new P2<OSMNode>(node, nextNode);
         if (alreadyAddedEdges.contains(nodePair)) {
-            return;
+            return Set.of();
         }
         alreadyAddedEdges.add(nodePair);
         IntersectionVertex startEndpoint = handler.getVertexForOsmNode(node, area.parent);
         IntersectionVertex endEndpoint = handler.getVertexForOsmNode(nextNode, area.parent);
 
-        createSegments(node, nextNode, startEndpoint, endEndpoint, Arrays.asList(area), edgeList,
-                edges);
+        return createSegments(startEndpoint, endEndpoint, List.of(area), edgeList);
     }
 
-    private void createSegments(OSMNode fromNode, OSMNode toNode, IntersectionVertex startEndpoint,
-            IntersectionVertex endEndpoint, Collection<Area> areas, AreaEdgeList edgeList,
-            Set<Edge> edges) {
-
+    private Set<AreaEdge> createSegments(IntersectionVertex startEndpoint, IntersectionVertex endEndpoint,
+            Collection<Area> areas, AreaEdgeList edgeList
+    ) {
         List<Area> intersects = new ArrayList<Area>();
 
         Coordinate[] coordinates = new Coordinate[] { startEndpoint.getCoordinate(),
@@ -416,7 +422,7 @@ public class WalkableAreaBuilder {
         GeometryFactory geometryFactory = GeometryUtils.getGeometryFactory();
         LineString line = geometryFactory.createLineString(coordinates);
         for (Area area : areas) {
-            MultiPolygon polygon = area.toJTSMultiPolygon();
+            MultiPolygon polygon = area.jtsMultiPolygon;
             Geometry intersection = polygon.intersection(line);
             if (intersection.getLength() > 0.000001) {
                 intersects.add(area);
@@ -424,7 +430,7 @@ public class WalkableAreaBuilder {
         }
         if (intersects.size() == 0) {
             // apparently our intersection here was bogus
-            return;
+            return Set.of();
         }
         // do we need to recurse?
         if (intersects.size() == 1) {
@@ -459,7 +465,6 @@ public class WalkableAreaBuilder {
             }
 
             street.setStreetClass(cls);
-            edges.add(street);
 
             label = "way (area) " + areaEntity.getId() + " from " + endEndpoint.getLabel() + " to "
                     + startEndpoint.getLabel();
@@ -478,17 +483,17 @@ public class WalkableAreaBuilder {
             }
 
             backStreet.setStreetClass(cls);
-            edges.add(backStreet);
 
             WayProperties wayData = wayPropertySet.getDataForWay(areaEntity);
             handler.applyWayProperties(street, backStreet, wayData, areaEntity);
-
+            return Set.of(street, backStreet);
         } else {
             // take the part that intersects with the start vertex
             Coordinate startCoordinate = startEndpoint.getCoordinate();
             Point startPoint = geometryFactory.createPoint(startCoordinate);
+            Set<AreaEdge> edges = new HashSet<>();
             for (Area area : intersects) {
-                MultiPolygon polygon = area.toJTSMultiPolygon();
+                MultiPolygon polygon = area.jtsMultiPolygon;
                 if (!(polygon.intersects(startPoint) || polygon.getBoundary()
                         .intersects(startPoint)))
                     continue;
@@ -527,20 +532,19 @@ public class WalkableAreaBuilder {
                                 + edgeCoordinate, edgeCoordinate.x, edgeCoordinate.y);
                         areaBoundaryVertexForCoordinate.put(edgeCoordinate, newEndpoint);
                     }
-                    createSegments(fromNode, toNode, startEndpoint, newEndpoint,
-                            Arrays.asList(area), edgeList, edges);
-                    createSegments(fromNode, toNode, newEndpoint, endEndpoint, intersects,
-                            edgeList, edges);
-                    break;
+                    edges.addAll(createSegments(startEndpoint, newEndpoint, List.of(area), edgeList));
+                    edges.addAll(createSegments(newEndpoint, endEndpoint, intersects, edgeList));
+                    return edges;
                 }
             }
         }
+        return Set.of();
     }
 
     private void createNamedAreas(AreaEdgeList edgeList, Ring ring, Collection<Area> areas) {
-        Polygon containingArea = ring.toJtsPolygon();
+        Polygon containingArea = ring.jtsPolygon;
         for (Area area : areas) {
-            Geometry intersection = containingArea.intersection(area.toJTSMultiPolygon());
+            Geometry intersection = containingArea.intersection(area.jtsMultiPolygon);
             if (intersection.getArea() == 0) {
                 continue;
             }
@@ -568,93 +572,29 @@ public class WalkableAreaBuilder {
         }
     }
 
-    private void accumulateRingNodes(Ring ring, List<OSMNode> nodes, List<VLPoint> vertices) {
-        for (OSMNode node : ring.nodes) {
-            if (nodes.contains(node)) {
-                // hopefully, this only happens in order to
-                // close polygons
-                continue;
-            }
-            VLPoint point = new VLPoint(node.lon, node.lat);
-            nodes.add(node);
-            vertices.add(point);
-        }
-    }
-
-    private void accumulateVisibilityPoints(List<OSMNode> nodes, VLPolygon polygon,
-            List<VLPoint> visibilityPoints, List<OSMNode> visibilityNodes, boolean hole) {
-        int n = polygon.vertices.size();
-        for (int i = 0; i < n; ++i) {
-            OSMNode curNode = nodes.get(i);
-            VLPoint cur = polygon.vertices.get(i);
-            VLPoint prev = polygon.vertices.get((i + n - 1) % n);
-            VLPoint next = polygon.vertices.get((i + 1) % n);
-            if (hole
-                    || (cur.x - prev.x) * (next.y - cur.y) - (cur.y - prev.y) * (next.x - cur.x) > 0) {
-                // that math up there is a cross product to check
-                // if the point is concave. Note that the sign is reversed because
-                // visilibity is either ccw or latitude-major
-
-                if (!visibilityNodes.contains(curNode)) {
-                    visibilityPoints.add(cur);
-                    visibilityNodes.add(curNode);
+    private boolean isPlatformLinkingEndpoint(OsmVertex osmVertex) {
+        boolean isCandidate = false;
+        Vertex start = null;
+        for (Edge e : osmVertex.getIncoming()) {
+            if (e instanceof StreetEdge && ! (e instanceof AreaEdge)) {
+                StreetEdge se = (StreetEdge) e;
+                if (Arrays.asList(1,2,3).contains(se.getPermission().code)) {
+                    isCandidate = true;
+                    start = se.getFromVertex();
+                    break;
                 }
             }
         }
-    }
 
-    private VLPolygon makeStandardizedVLPolygon(List<VLPoint> vertices, List<OSMNode> nodes,
-            boolean reversed) {
-        VLPolygon polygon = new VLPolygon(vertices);
-
-        if ((reversed && polygon.area() > 0) || (!reversed && polygon.area() < 0)) {
-            polygon.reverse();
-            // need to reverse nodes as well
-            reversePolygonOfOSMNodes(nodes);
-        }
-
-        if (!polygon.is_in_standard_form()) {
-            standardize(polygon.vertices, nodes);
-        }
-        return polygon;
-    }
-
-    private void standardize(ArrayList<VLPoint> vertices, List<OSMNode> nodes) {
-        // based on code from VisiLibity
-        int point_count = vertices.size();
-        if (point_count > 1) { // if more than one point in the polygon.
-            ArrayList<VLPoint> vertices_temp = new ArrayList<VLPoint>(point_count);
-            ArrayList<OSMNode> nodes_temp = new ArrayList<OSMNode>(point_count);
-            // Find index of lexicographically smallest point.
-            int index_of_smallest = 0;
-            for (int i = 1; i < point_count; i++)
-                if (vertices.get(i).compareTo(vertices.get(index_of_smallest)) < 0)
-                    index_of_smallest = i;
-            // minor optimization for already-standardized polygons
-            if (index_of_smallest == 0)
-                return;
-            // Fill vertices_temp starting with lex. smallest.
-            for (int i = index_of_smallest; i < point_count; i++) {
-                vertices_temp.add(vertices.get(i));
-                nodes_temp.add(nodes.get(i));
+        if (isCandidate && start != null) {
+            boolean isEndpoint = true;
+            for (Edge se : osmVertex.getOutgoing()) {
+                if (!se.getToVertex().getCoordinate().equals(start.getCoordinate()) && !(se instanceof AreaEdge)) {
+                    isEndpoint = false;
+                }
             }
-            for (int i = 0; i < index_of_smallest; i++) {
-                vertices_temp.add(vertices.get(i));
-                nodes_temp.add(nodes.get(i));
-            }
-            for (int i = 0; i < point_count; ++i) {
-                vertices.set(i, vertices_temp.get(i));
-                nodes.set(i, nodes_temp.get(i));
-            }
+            return isEndpoint;
         }
-    }
-
-    private void reversePolygonOfOSMNodes(List<OSMNode> nodes) {
-        for (int i = 1; i < (nodes.size() + 1) / 2; ++i) {
-            OSMNode tmp = nodes.get(i);
-            int opposite = nodes.size() - i;
-            nodes.set(i, nodes.get(opposite));
-            nodes.set(opposite, tmp);
-        }
+        return false;
     }
 }
